Yamls/novanano/aerosolnovanano.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: aerosol-novanano-service
  namespace: novanano-apps
spec:
  selector:
    app: aerosol-novanano-app
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aerosol-novanano-app
  namespace: novanano-apps
spec:
  selector:
    matchLabels:
      app: aerosol-novanano-app
  replicas: 1
  template:
    metadata:
      name: aerosol-novanano-app
      labels:
        app: aerosol-novanano-app
    spec:
      containers:
      - name: aerosol-novanano-app
        image: novamechanics/aerosol
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
