Yamls/novanano/bridgedbingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano13-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - bridgedb.cloud.nanosolveit.eu
    secretName: bridgedb-app-cert
  rules:
  - host: bridgedb.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: bridgedb-novanano-service
          servicePort: 8080
        path: /
