Yamls/novanano/cellviabilitynovananoingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cellviability-novanano-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cellviability.cloud.nanosolveit.eu
    secretName: cellviability-novanano-app-cert
  rules:
  - host: cellviability.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: cellviability-novanano-service
          servicePort: 8080
        path: /
