Yamls/novanano/dermalingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano10-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dermal.cloud.nanosolveit.eu
    secretName: dermal-app-cert
  rules:
  - host: dermal.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: dermal-novanano-service
          servicePort: 8080
        path: /
