Yamls/novanano/ecotoxingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano12-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ecotox.cloud.nanosolveit.eu
    secretName: ecotox-app-cert
  rules:
  - host: ecotox.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: ecotox-novanano-service
          servicePort: 8080
        path: /
