Yamls/novanano/exposurepbpknovananoingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano6-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - exposurepbpk.cloud.nanosolveit.eu
    secretName: exposurepbpk-app-cert
  rules:
  - host: exposurepbpk.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: exposurepbpk-novanano-service
          servicePort: 8080
        path: /
