Yamls/novanano/facetcytotoxicityingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano9-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - facetcytotoxicity.cloud.nanosolveit.eu
    secretName: facetcytotoxicity-app-cert
  rules:
  - host: facetcytotoxicity.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: facetcytotoxicity-novanano-service
          servicePort: 8080
        path: /
