Yamls/novanano/lungexposurenovananoingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano3-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - lungexposure.cloud.nanosolveit.eu
    secretName: lungexposure-app-cert
  rules:
  - host: lungexposure.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: lungexp-novanano-service
          servicePort: 8080
        path: /
