Yamls/novanano/mszetanovananoingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano4-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - mszeta.cloud.nanosolveit.eu
    secretName: mszeta-app-cert
  rules:
  - host: mszeta.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: mszeta-novanano-service
          servicePort: 8080
        path: /
