Yamls/novanano/nanoxtractingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano11-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nanoxtract.cloud.nanosolveit.eu
    secretName: nanoxtract-app-cert
  rules:
  - host: nanoxtract.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: nanoxtract-novanano-service
          servicePort: 8080
        path: /
