Yamls/novanano/novananoingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/app-root: /2/
spec:
  tls:
  - hosts:
    - cellviability.cloud.nanosolveit.eu
    secretName: novanano-app-cert
  rules:
  - host: cellviability.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: novanano-service
          servicePort: 8080
        path: /
