Yamls/novanano/zetapotentialnovananoingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: novanano5-app-secure
  namespace: novanano-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - zetapotential.cloud.nanosolveit.eu
    secretName: zetapotential-app-cert
  rules:
  - host: zetapotential.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: zetapotential-novanano-service
          servicePort: 8080
        path: /
